tests/testcases/invalid/semantic/39_return_type_mismatch_numeric.ciel
// Error: return type mismatch (different numeric types)
float compute() {
    int x = 42;
    return x;  // Error: returning int, but function expects float
}

int main() {
    float result = compute();
    return 0;
}
